Increase rune size for splash and header

--- a/crates/ui-tauri/frontend/index.html
+++ b/crates/ui-tauri/frontend/index.html
@@ -41,6 +41,7 @@
         --font-md: var(--space-5);
         --font-lg: var(--space-6);
         --font-xl: var(--space-7);
+        --font-xxl: var(--space-8);
       }
 
       * {
@@ -89,6 +90,8 @@
         color: #f0f0f0;
         font-weight: 700;
         letter-spacing: 1.2px;
+        font-size: var(--font-xxl);
+        line-height: 1;
       }
 
       h1 {
@@ -308,7 +311,7 @@
       }
 
       .splash-glyph {
-        font-size: var(--font-xl);
+        font-size: var(--font-xxl);
         color: #f0f0f0;
         text-shadow: none;
         z-index: 1;
