Tune rune sizing for splash and header

--- a/crates/ui-tauri/frontend/index.html
+++ b/crates/ui-tauri/frontend/index.html
@@ -90,7 +90,7 @@
         color: #f0f0f0;
         font-weight: 700;
         letter-spacing: 1.2px;
-        font-size: var(--font-xxl);
+        font-size: var(--font-lg);
         line-height: 1;
       }
 
@@ -311,7 +311,7 @@
       }
 
       .splash-glyph {
-        font-size: var(--font-xxl);
+        font-size: var(--font-xl);
         color: #f0f0f0;
         text-shadow: none;
         z-index: 1;
