Slightly reduce splash rune size

--- a/crates/ui-tauri/frontend/index.html
+++ b/crates/ui-tauri/frontend/index.html
@@ -311,7 +311,7 @@
       }
 
       .splash-glyph {
-        font-size: var(--font-xxl);
+        font-size: var(--font-xl);
         color: #f0f0f0;
         text-shadow: none;
         z-index: 1;
