--- a/crates/ui-tauri/frontend/index.html
+++ b/crates/ui-tauri/frontend/index.html
@@ -247,6 +247,19 @@
         margin-top: var(--space-2);
       }
 
+      .confirm label {
+        display: inline-flex;
+        align-items: center;
+        gap: var(--space-2);
+        line-height: 1.4;
+      }
+
+      input[type="checkbox"] {
+        width: var(--space-4);
+        height: var(--space-4);
+        accent-color: var(--stroke-strong);
+      }
+
       .entry-advanced {
         margin-top: var(--space-3);
       }
